src/objects/Course_Delivery__c.object
<CustomObject>
    <description>Used to track each time a course is delivered.</description>
    <fields>
        <fullName>Attendee_Count__c</fullName>
        <label>Attendee Count</label>
        <summaryFilterItems>
            <field>Course_Attendee__c.Status__c</field>
            <operation>equals</operation>
            <value>Enrolled,Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Course_Attendee__c.Course_Delivery__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <description>Course being delivered.</description>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Course Deliveries</relationshipLabel>
        <relationshipName>Course_Deliveries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Instructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Instructor that will teach a course.</description>
        <label>Instructor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Is_Instructor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Course_Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>City where a course will take place.</description>
        <label>Location</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Tokyo, JP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore, SG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paris, FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London, GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berlin, DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco, US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicago, US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toronto, CA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region where course will take place.</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAMER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date the course will begin.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the course delivery.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Course Delivery</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Region__c</columns>
        <columns>Location__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Instructor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DELIVERY-{00000}</displayFormat>
        <label>Course Delivery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Deliveries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>